src/objects/Github_Request__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>remove</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Github_Event__c</fullName>
        <inlineHelpText>The event coming from Github (Issue, Issue Comment, etc.)</inlineHelpText>
        <label>GitHub Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Record_Id__c</fullName>
        <label>Github Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Record_Type__c</fullName>
        <label>Github Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Github_Record_URL__c</fullName>
        <label>Github Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Github_Repository__c</fullName>
        <inlineHelpText>The name of the repository in Github.</inlineHelpText>
        <label>Github Repository</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Unique_Id__c</fullName>
        <description>Github Record Type + &apos; &apos; + Github Record Id =&gt; Issue 9</description>
        <label>Github_Unique_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_Username__c</fullName>
        <label>Github Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Datestamp__c</fullName>
        <description>A copy of CreatedDate that we can manipulate for testing.</description>
        <label>Queue Datestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <inlineHelpText>The target of the event, i.e. the name of the record to attach in **lurch:attach W-12345.</inlineHelpText>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Github Request</label>
    <nameField>
        <displayFormat>GitReq-{00000000}</displayFormat>
        <label>Github Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Github Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>